Modalify the links

--- a/chairs/app/views/layouts/application.html.erb
+++ b/chairs/app/views/layouts/application.html.erb
@@ -10,13 +10,36 @@
 
 
 <% if user_signed_in? %>
-  <%= render partial: "links/form" %>
+
+
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">New Link</h4>
+      </div>
+      <div class="modal-body">
+        <%= render partial: "links/form" %>
+      </div>
+
+    </div>
+  </div>
+</div>
+
 <% end %>
+
 
 <%= link_to "Home", root_path %>
 
 <% if user_signed_in? %>
   Hi <%= current_user.email %>
+  <%= link_to "New Link", "#", data: { toggle: "modal", target: "#myModal" } %>
   <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
 <% end %>
 
