--- a/chairs/app/views/links/_form.html.erb
+++ b/chairs/app/views/links/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @link, remote: true do |f| %>
   <%= f.input :url %>
+  <%= f.input :text %>
   <%= f.submit class: "btn btn-lg btn-primary" %>
 <% end %>
