--- a/chairs/app/views/links/_links.html.erb
+++ b/chairs/app/views/links/_links.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @links.each do |link| %>
-  <li><%=link_to link.url, link.url %></li>
+  <li><%=link_to link.url, link.url %> -- <%= link.text %></li>
   <% end %>
 </ul>
